--- a/style.scss
+++ b/style.scss
@@ -39,6 +39,12 @@ body {
   .dark-mode {
     background-color: black;
     color: white;
+
+    .nav-bar{
+        a{
+            color: white;
+        }
+    }
   }
 
 
