--- a/style.css
+++ b/style.css
@@ -282,7 +282,7 @@ body {
   justify-content: center;
 }
 .services .now {
-  background-image: url(/images/WhatsApp\ Image\ 2024-05-03\ at\ 00.13.55.jpeg);
+  background-image: url(images/WhatsApp\ Image\ 2024-05-03\ at\ 00.13.55.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 24%;
@@ -352,7 +352,7 @@ body {
   font-size: 17px;
 }
 .services .foni {
-  background-image: url(/images/WhatsApp\ Image\ 2024-05-03\ at\ 00.13.57\ \(1\).jpeg);
+  background-image: url(images/WhatsApp\ Image\ 2024-05-03\ at\ 00.13.57\ \(1\).jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 24%;
@@ -691,7 +691,7 @@ body {
     font-size: 17px;
   }
   .services .foni {
-    background-image: url(/images/WhatsApp\ Image\ 2024-05-03\ at\ 00.13.57\ \(1\).jpeg);
+    background-image: url(images/WhatsApp\ Image\ 2024-05-03\ at\ 00.13.57\ \(1\).jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 30%;
