--- a/style.scss
+++ b/style.scss
@@ -399,7 +399,7 @@ h2{
 
 
     .now{
-        background-image: url(/images/WhatsApp\ Image\ 2024-05-03\ at\ 00.13.55.jpeg);
+        background-image: url(images/WhatsApp\ Image\ 2024-05-03\ at\ 00.13.55.jpeg);
         background-repeat: no-repeat;
         background-size: cover;
         width: 24%;
@@ -503,7 +503,7 @@ h2{
 
     .foni{
        
-        background-image: url(/images/WhatsApp\ Image\ 2024-05-03\ at\ 00.13.57\ \(1\).jpeg);
+        background-image: url(images/WhatsApp\ Image\ 2024-05-03\ at\ 00.13.57\ \(1\).jpeg);
         background-repeat: no-repeat;
         background-size: cover;
         width: 24%;
@@ -1050,7 +1050,7 @@ h2{
 
     .foni{
        
-        background-image: url(/images/WhatsApp\ Image\ 2024-05-03\ at\ 00.13.57\ \(1\).jpeg);
+        background-image: url(images/WhatsApp\ Image\ 2024-05-03\ at\ 00.13.57\ \(1\).jpeg);
         background-repeat: no-repeat;
         background-size: cover;
         width: 30%;
