--- a/style.scss
+++ b/style.scss
@@ -83,7 +83,17 @@ body {
 
   }
 
+  .banner .text p {
+    color: white;
+}
 
+.banner .fill i {
+    color: white;
+}
+
+.now i {
+    color: white;
+}
   
 }
 
@@ -974,52 +984,6 @@ p{
     padding: 5px 0px 30px 65px;
 
  .text{
-//   h1{
-//         font-size:31px ;
-//         margin-top: 25px;
-       
-//     }
-
-//     p{
-       
-//         font-size: 14px;
-//         padding-top: 10px;
-//         padding-bottom: 10px;
-
-//     }
-
-
-//     .dis{
-//         font-size: 13px;
-//         padding: 10px 16px;
-        
-//     }
-
-    
-//     .kok{
-//         font-size: 13px;
-//         padding: 7px 3px;
-//         margin-left: 30px;
-        
-//     }
-
-//  }
-//     img{
-//     width: 130px;
-//     height: 26vh;
-//     object-fit: cover;
-//     padding-right: 13px;
-    
-        
-//     }
-
-//     .image-life{
-//         display: flex;
-//         justify-content: baseline;
-
-//         .pic1, .pic3{
-//             margin-top: 56px;
-//         }
 
 h1{
     font-size: 35px;
@@ -1146,80 +1110,6 @@ h1{
      
 
 
-
-//   .fill{
-
-//        span{
-//         margin: 15px 0 0 0;
-//         font-size: 14px;
-//         padding-top: 10px;
-
-//       }
-
-
-//     p{
-//         margin: 15px 0 0 0;
-//         font-size: 14px;
-//         padding-top: 6px;
-
-//         i{
-//             font-size: 24px;
-//             padding-bottom: 15px;
-//         }
-         
-//     }
-
-//     span{
-//         margin: 15px 0 0 0;
-//         font-size: 14px;
-         
-//     }
-
-//     i{
-//         color: black;
-//         padding: 0  10px 0 0;
-//         font-size: 24px;
-//     }
-
-// }
-
-
-// .fill{
-     
-
-//     p:first-of-type {
-//         margin: 10px 0 0 0;
-        
-//         font-size: 15px;
-
-//         display: flex;
-//         align-items: center;
-     
-         
-//     }
-
-//     i{
-//         color: #000;
-//         padding: 0  10px 0 0;
-//         font-size: 28px;
-//     }
-
-
-// p:last-of-type  {
-//     margin: 5px 0 0 0;
-   
-   
-//     font-size: 15px;
-// }
-
-// margin: 15px 0 0 0;
-
-// i{
-//     font-size: 26px;
-//     font-weight: 100;
-// }
-// }
- 
 
 }
     
@@ -1598,170 +1488,6 @@ h1{
 
 
 }
-
-
-
-// @media   (min-width: 768px) and (max-width: 991.98px) {
-
-
-// .main-nav{
-//     padding: 20px;
-
-
-//     img{
-//         width: 21%;
-//         align-self: center;
-//         margin-left: 5px;
-        
-//     }
-
-//     .nav-bar{
-    
-//         margin-right:160px;
-
-    
-
-//         li{
-//             list-style: none;
-//             padding-left: 20px;
-
-         
-//         }
-
-//         img{
-//             padding-left: 58px;
-//             width: 28%;
-//         }
-//     }
-
-
-//     a{
-//         font-size: 15px;
-//         color:#000;
-//     }
-    
-   
-// }
-
-// .main-nav .nav-bar {
-//     margin-right: 64px;
-// }
-
-
-
-// .banner{
-//     padding: 5px 0px 30px 65px;
-    
-
-//       .text{
-//     top :60px;
-//     }
- 
-//     h1{
-//         font-size:23px ;
-//         margin-top: 9px;
-       
-//     }
-
-//     p{
-//         font-size: 10px;
-//         line-height: 1.4;
-//         padding-top: 10px;
-//         padding-bottom: 10px;
-//         margin: 0;
-
-//     }
-
-
-//     .dis{
-
-//         font-size: 10px;
-//         padding: 9px 14px;
-        
-//     }
-
-    
-//     .kok{
-//         font-size: 10px;
-//         padding: 7px 3px;
-//         margin-left: 30px;
-        
-//     }
-
-
-//     }
- 
-   
-
-    
-//     img{
-//     width: 98px;
-//     height: 27vh;
-//     padding-right: 13px;
-    
-        
-//     }
-
-//     .image-life{
-
-
-//         .pic1, .pic3{
-//             margin-top: 56px;
-//         }
-
-// }
-  
-
-//     .zim{
-//         padding-bottom: 1rem;
-//     }
-
-//   .fill{
-     
-
-//         p:first-of-type {
-//             margin: 10px 0 0 0;
-//             color:#742296;
-//             font-family: "JosefinSans-Regular";
-//             font-size: 18px;
-
-//             display: flex;
-//             align-items: center;
-         
-             
-//         }
-    
-//         i{
-//             color: #000;
-//             padding: 0  10px 0 0;
-//             font-size: 28px;
-//         }
-
-
-//     p:last-of-type  {
-//         margin: 5px 0 0 0;
-       
-//         color:#000;
-//         font-family: "JosefinSans-Regular";
-//         font-size: 17px;
-
-//         display: flex;
-//         align-items: end;
-          
-//     }
-
-    
-//     i{
-//         font-size: 26px;
-//         font-weight: 100;
-//     }
-// }
-
-// }
-
-
-
-// }
 
 
 
@@ -2292,15 +2018,15 @@ p {
     font-size: 12px;
     margin-bottom: -19px;
 }
-// end
 
 }
 
 @media (max-width: 575.98px) { 
 
     .main-nav .nav-bar {
-        margin-right: 0px;
+        margin-right: 119px;
     }
+
 
 
     .main-nav{
@@ -2316,7 +2042,7 @@ p {
         }
     
         .nav-bar{
-            margin-right:160px;
+            margin-right:139px;
     
     
     
@@ -2350,8 +2076,8 @@ p {
         width: 0;
         position: fixed; 
         z-index: 1; 
-        right: 0px;
-        top: 0;
+        left: 0px;
+        top: 0px;
         background-color:#FEFDED; 
      
         overflow-x: hidden; 
@@ -2367,9 +2093,10 @@ p {
         
     }
       span{
-        // margin: auto;
+        position: relative;
         margin-right: 30px;
         display: flex;
+        right: 5px;
       
       
       }
@@ -2416,6 +2143,7 @@ p {
         right: 45px;
         font-size: 60px;
       }
+
     }
 
     .banner .fill p:first-of-type {
@@ -2438,7 +2166,7 @@ p {
     }
 
     
-        }
+        
      
        
     
@@ -2455,7 +2183,7 @@ p {
             display: flex;
             padding-top: 53px;
     
-            .pic1, {
+            .pic1 {
                 margin-top: 30px;
             }
 
@@ -2502,6 +2230,7 @@ p {
             font-weight: 100;
         }
     }
+
     
     }
 
@@ -2596,13 +2325,15 @@ h2{
     .gallery{
         display: flex;
         
+        
         img{
-            height:30.5vh;
+            height:29.5vh;
             margin-bottom: 15px;
+            margin-right: 13px;
         }
         
         .natural{
-            margin-top: 40px; 
+            margin-top: 0px; 
          }
     
     }
@@ -3079,733 +2810,16 @@ width: 50%;
    }
 
   }
+
+}
 }
 
 
 
 
 
-}
 
 
-// @media (max-width: 575.98px) { 
-    
-// .main-nav{
-//     padding: 20px 0 0 0;
-//     display: flex;
-   
-
-
-//     img{
-//         margin-left: 6px;
-//         height: 7vh;
-//         width: 28%;
-        
-//     }
-
-//     .nav-bar{
-     
-//         margin-right:160px;
-      
-
-  
-
-//         li{
-//             list-style: none;
-//             padding-left: 10px;
-            
-
-         
-         
-//         }
-
-//         img{
-//             padding-left: 0px;
-//             width: 43%;
-//             height: 3vh;
-           
-//         }
-//     }
-
-
-//     a{
-//      display: none;
-//     }
-    
-    
-// }
-
-
-// .banner .image-life .pic3 {
-//     margin-top: 28px;
-// }
-
-// .banner .image-life .pic1 {
-//     margin-top: 28px;
-// }
-
-
-
-// .banner{
-//     padding: 0px 0px 0px 19px;
-//      display: flex;
-//      flex-direction: column;
-    
- 
-//     .zim{
-//         display: flex;
-//         justify-content: center;
-//     }
-
-//     .text{
-   
-//     top :20px;
-//     }
- 
-//     h1{
-//         font-size: 29px;
-//         margin-top: 0px;
-//         margin-bottom: 7px;
-    
-       
-//     }
-
-//     p{
-//         font-size: 15px;
-//         line-height: 1.4;
-//         padding-top: 0px;
-//         padding-bottom: 10px;
-//         margin: 0;
-//         text-align: center;
-
-//     }
-
-
-//     .dis{
-//         font-size: 10px;
-//         padding: 7px 12px;
-        
-//     }
-
-    
-//     .kok{
-//         font-size: 9px;
-//         padding: 4px 6px;
-//         margin-left: 16px;
-        
-//     }
-
-
-//     img{
-//    padding: 30px 0;
-//    width: 84px;
-//    height: 38vh;
-//    object-fit: cover;
-
-//     }
-    
-//     .image-life{
-//        padding: 0;
-//        margin: 0;
-        
-//     }
-
-
-//    .pic1, .pic3 {
-//     margin-top: 28px;
-//    }
-
-
-    
-
-//   .fill{
-
-//     display: flex;
-//     justify-content: center;
-//        span{
-
-//         margin:0;
-//         font-size: 9px;
-//         padding-top: 10px;
-
-//       }
-
-
-//     p{
-    
-//         margin: 0;
-//         font-size: 9px;
-//         padding-top: 10px;
-       
-
-//         i{
-//             font-size: 20px;
-//             padding-bottom: 10px;
-//             display: none;
-//         }
-         
-//     }
-
-//     i{
-//         display: none;
-//     }
-
-    
-
-//     span{
-//         margin: px 0 0 0;
-//         font-size: 9px;
-      
-         
-//     }
-
-//     i{
-//         color: black;
-//         padding: 0  10px 0 0;
-//         font-size: 24px;
-//     }
-
-// }
-
-// }
-
-
-// .about{
-//     padding: 10px 12px;
-    
-
-// h2{
-//     font-size: 15px;
-//     padding-bottom: 8px;
-//     text-align: center;
-//     margin-left: 2px;
-// }
-
-
-// .container{
-//     display: flex;
-//     justify-content: space-evenly;
-//     flex-direction: column;
-  
-
- 
-//     .gallery{
-//         display: flex;
-        
-//         img{
-//             height:32vh;
-//             margin-bottom: 15px;
-//         }
-        
-//         .natural{
-//             margin-top: 40px; 
-//          }
-    
-//     }
-
-
-//     .gala{
-//         margin-bottom: 17px;
-//     }
-
-//         p{
-//             font-size: 10px;
-//             margin-bottom: 17px;
-//             text-align: center;
-//         }
-        
-    
-
-//     .hi{
-//         height: 45vh;
-//         width: 78%;
-//         display: flex;
-      
-
-
-       
-//      .deep{
-//         height: 4vh;  
-//         margin-left: 15px;
-//     }
-
-//     }
-//     .rong{
-//         margin-left: 0px;
-//      }
-
-//      .gun{
-//         padding-left: 0px;
-//         display: flex;
-//         flex-direction: column;
-//         align-items: center;
-        
-
-
-//         .nato{
-//             height: 45vh;
-           
-//          }
-
-
-//       p{
-//         padding-top: 13px ;
-//         padding-bottom: 16px;
-//         margin: 0;
-//         font-size: 10px;
-//      }
-
-     
-     
-
-//      a{
-//         font-size: 8px;
-//         padding: 7px 14px;
-//      }
-
-
-//     }
-
-
-   
-    
-// }
-
-
-// }
-
-
-
-
-// .main{
-//     padding: 60px 65px 0 65px  ;
-  
-
-//          h2{
-//      font-size: 21px;
-//      font-family: "JosefinSans-Regular";
-//      font-weight: bolder;
-//      margin-bottom: 0;
-    
-//        }
-
-
-//  .get{
-//      display: flex;
-//      justify-content: center;
-//      flex-direction: column;
-   
-     
-// .very {
-
-//  margin: 53px 40px 0 0px;
-
-//  }
-
-//  .name {
- 
-//  margin: -14px 0px 0 40px;
-
-//  }
-     
-
-//      .kim2{
-//          display: flex;
-//          justify-content: flex-end;
-//          align-items: end;
-//          background-image: url("images/WhatsApp Image 2024-05-02 at 07.24.17 (1).jpeg");
-//          background-repeat: no-repeat;
-//          background-size: cover;
-//          object-fit: contain;
-//          width: 286px;
-//          height: 35vh;
-
-//          .late{
-//              object-fit: contain;
-//              width: 9.3%;
-//              height: 6vh;
-//              margin-left: 20PX;
-//          }
-//      }
-
-//      .kim1{
-//          display: flex;
-//          justify-content: flex-end;
-//          object-fit: contain;
-//          align-items: end;
-//          background-image: url("/images/WhatsApp Image 2024-05-02 at 07.24.13.jpeg");
-//          background-repeat: no-repeat;
-//          background-size: cover;
-//          width: 242px;
-//          height: 32vh;
-
-//          .visa{
-             
-//              object-fit: contain;
-//              width: 9.3%;
-//              height: 6vh;
-//              margin-left: 20PX;
-//          }
-//      }
-
-
-//  p:first-of-type {
-
-//      font-family: "JosefinSans-Regular";
-//      font-weight: 500;
-//      margin: 15px 0;
-
-//  }
-
-// p{
-
-//      font-size: 18px;
-//      font-family: "JosefinSans-Regular";
-//      font-weight: 550;
-//      margin: 15px 0;
-
-// }
-
-//  h3{
-//      font-size: 20px;
-//      margin: 15px 0;
-//      font-family: "JosefinSans-Regular";
-//      font-weight: bolder;
-//  }
-
-
-
-//  }
-
-
-// }
-
-
-// // .main{
-// //     padding: 30px 0 0 0px  ;
-
-// //     .more{
-    
-    
-
-// //     .very{
-// //         margin-right: 20px;
-// //     }
-   
-    
-// //     }
-
-// //     img{
-// //         height: 19vh;
-// //         width: 100%;
-     
-      
-// //     }
-
-// //     p{
-// //         font-size: 8px;
-// //         margin: 3px 0;
-// //     }
-
-
-// //     h3{
-// //         font-size: 13px;
-// //         margin: 3px 0;
-        
-// //     }
-
-// //     span{
-// //         font-size: 9.3px;
-// //         margin: 2px 0;
-// //     }
-
-// //     h2{
-// //         font-size: 15px;
-// //         margin-bottom: 10px;
-// //         text-align: center;
-       
-// //     }
-
-// //     .food{
-// //         margin-top: 10px;
-// //     }
-
-// //     .find{
-// //         margin-top: 10px;
-// //     }
-
-   
-// // }
-
-
-// .instagram{
-//     padding: 30px;
-
-//   h2{
-    
-//       font-size: 10px;
-//   }
-
-//   .demo{
-//       display: flex;
-//       justify-content: center;
-
-
-//       img{
-//           width: 20%;
-//           height: 21vh;
-//           padding: 5px;
-//       }
-//       padding: 15px;
-//   }
-
-//   .name{
-//       margin-top: 13px;
-//       height: 63vh;
-//   }
-
-
-//   .kill{
-
-
-//       p{
-//           font-size: 10px;
-//           margin-bottom: 8px;
-        
-//       }
-
-//   a{
-//       font-size: 7px;
-//        padding: 7px 12px;
-      
-//    }
-
-//   }
-// }
-
-
-
-
-// .isdo{
-//     padding: 20px 0px  20px 27px;
-
-    
-//     display: flex;
-//     justify-content: space-around;
-//     flex-wrap: wrap;
-
-   
-  
-
-//     img{
-//         width: 30%;
-//         padding-bottom: 10px;
-
-//     }
-
-//     h6{
-//       font-size: 10px;
-//     }
-
-//     p{
-//       font-size: 9px;
-//       margin-bottom: 4px;
-//     }
-
-// .first{
-
-// width: 50%;
-
-
-//   p{
-//     margin-bottom: 3px;
-//     font-size: 7px;
-//   }
-
-//     .shame{
-//         margin-left: 17px;
-//         margin-bottom: 5px;
-        
-//      }
-
-
-//     i{
-//       font-size: 14px;
-//       padding-right: 9px;
-//     }
-
-// }
-
-// .second{
-  
-//     width: 50%;
-// }
-
-
-// .third{
-  
-//     width: 50%;
-//     margin-top: 10px;
-// }
-
-// .forth{
-//     width: 50%;
-//     margin-top: 10px;
-   
-//     i{
-//         font-size: 10px;
-//         padding-right: 15px;
-//     }
-
-//     p{
-//         padding: 0;
-//     }
-// }
-
-// }
-
-
-
-
-// .services{
-//     padding: 40px 0px;
-
-
- 
-//     h2{
-//        font-size: 15px;
-//        padding-bottom: 15px;
-//        text-align: center;
-//     }
-
-//     .fill{
-      
-//         display: flex;
-//        justify-content: center;
-//        align-items: center;
-//        flex-direction: column;
-//     }
-
-
-
-//     .now{
-  
-//         width: 81%;
-//         height: 69vh;
-       
-//         .good{
-
-//             height: 69.2vh;
-//             width:100%;
-            
-            
-//          img{
-//             margin-left: 18px;
-//             width: 13.6%;
-//             height: 6.5vh;
-//          }
-    
-//             h5{
-//                 font-size: 17px;
-//                 padding-right: 40px;
-//                 margin-bottom: 6px;
-//             }
-    
-//         }
-      
-
-//     }
-
-       
-   
-//     .super{
-//         margin: 20px 0;
-//         background-color: #742296;
-//         color: white;
-//         width: 82%;
-//         height: 69vh;
-//         padding: 20px 15px;
-//         position: relative;
-    
-
-//         .more{
-
-//             height: 66.2vh;
-//             width:96%;
-//             display: flex;
-//             align-items: end;
-//             justify-content:end ;
-//             position: absolute;
-
-              
-//          img{
-//             object-fit: contain;
-//             width: 13%;
-//             height: 6vh;
-//             opacity: 70%;
-//             margin-right:3.2px;
-         
-//          }
-    
-
-//         }
-
-
-//       h3{
-//         font-size: 16px;
-        
-//       }
-
-//       li{
-//         font-size: 16px;
-//         padding: 8px;
-
-    
-
-//       }
-
-//       li:first-child {
-//         text-decoration: underline 2px solid white ;
-//         font-size: 17px;
-//       }
-
-
-//     }
-
-
-//     .foni{
-//         width: 81%;
-//         height: 69vh;
-       
-
-//     }
-
-//     .bad{
-//         height: 69.1vh;
-//         width:100%;
- 
-    
-         
-//         img{
-           
-//             margin-left: 15px;
-//             width: 13.6%;
-//             height: 6.5vh;
-//          }
-    
-//             h5{
-               
-//                 font-size: 17px;
-//                 padding-right: 66px;
-//                 margin-bottom: 17px;
-
-//             }
-
-  
-// }
-// }
-
-// }
 
 
 
@@ -3867,23 +2881,23 @@ width: 50%;
 }
 
 
-@media (max-width: 575px) {
+// @media (max-width: 575px) {
 
-    body{
-        overflow-x: hidden;
-    }
+//     body{
+//         overflow-x: hidden;
+//     }
 
-    .main-nav{
-    .overlay {
-      display: flex;
-    }
+//     .main-nav{
+//     .overlay {
+//       display: flex;
+//     }
 
-    span {
-      display: flex;
-    }
+//     span {
+//       display: flex;
+//     }
 
-  }
-}
+//   }
+// }
 
 
 
@@ -4088,3 +3102,5 @@ width: 50%;
         padding-bottom: 66px;
     }
 }
+
+
