--- a/style.scss
+++ b/style.scss
@@ -2318,7 +2318,7 @@ p {
       
       .overlay a:hover, .overlay a:focus {
         background-color:red;
-        color:#742296;
+        color:#f5f5f5;
         padding: 5px 10px;
         border-radius: 20px;
       }
