--- a/style.css
+++ b/style.css
@@ -549,6 +549,17 @@ body {
   font-weight: bolder;
 }
 
+.services .super .more img {
+  position: relative;
+  -o-object-fit: contain;
+  object-fit: contain;
+  width: 16.7%;
+  height: 6vh;
+  opacity: 100%;
+  margin-right: 4.2px;
+  margin-bottom: 6px;
+}
+
 .instagram {
   padding: 30px;
 }
@@ -2388,5 +2399,184 @@ body {
     padding: 5px;
     -o-object-fit: cover;
     object-fit: cover;
+  }
+  .services .super .more img {
+    position: relative;
+    -o-object-fit: contain;
+    object-fit: contain;
+    width: 16.9%;
+    height: 6vh;
+    opacity: 100%;
+    margin-right: 3.2px;
+    margin-bottom: 5px;
+  }
+  .services .super .more i {
+    position: absolute;
+    font-size: 18px;
+    background-color: #742296;
+    border-radius: 50%;
+    padding: 5px 7px;
+    color: white;
+    z-index: 1;
+    margin-right: 18px;
+    margin-bottom: 14px;
+  }
+}
+@media only screen and (min-width: 766px) and (max-width: 767.9px) {
+  .banner .row > * {
+    flex-shrink: 0;
+    width: 45%;
+    max-width: 100%;
+    padding-right: calc(var(--bs-gutter-x) * 0.5);
+    padding-left: calc(var(--bs-gutter-x) * 0.5);
+    margin-top: var(--bs-gutter-y);
+  }
+  .banner img {
+    width: 98px;
+    height: 48vh;
+    padding-right: 10px;
+  }
+  .banner .text h1 {
+    font-size: 29px;
+    margin-top: 0px;
+    line-height: 31px;
+    margin-bottom: 5px;
+  }
+  .banner .text p {
+    font-size: 12px;
+    font-family: "JosefinSans-Regular";
+    font-weight: 400;
+    line-height: 1.4;
+    padding-top: 0px;
+    padding-bottom: 7px;
+    line-height: 17px;
+    margin-bottom: 4px;
+  }
+  .main-nav .nav-bar img {
+    padding-left: 58px;
+    width: 23%;
+  }
+  .container .row > * {
+    flex-shrink: 0;
+    width: 50%;
+    max-width: 100%;
+    padding-right: calc(var(--bs-gutter-x) * 0.5);
+    padding-left: calc(var(--bs-gutter-x) * 0.5);
+    margin-top: var(--bs-gutter-y);
+  }
+  .about .container .gallery img {
+    height: 33.3vh;
+  }
+  .about .container .gun #video {
+    width: 283px;
+    height: 195px;
+  }
+  .about .container p {
+    font-size: 10px;
+    margin-bottom: 13px;
+    padding-top: 1px;
+  }
+  .services .now {
+    width: 33%;
+    height: 63vh;
+    position: relative;
+  }
+  .services .foni {
+    width: 33%;
+    height: 63vh;
+    position: relative;
+  }
+  .about .container p {
+    font-size: 9px;
+    margin-bottom: 13px;
+    padding-top: 1px;
+  }
+  .services .bad {
+    height: 63vh;
+    width: 100%;
+  }
+  .services .now .good {
+    height: 63vh;
+    width: 100%;
+  }
+  .services .super {
+    margin: 0 20px;
+    width: 33%;
+    height: 63vh;
+    padding: 20px 15px;
+    position: relative;
+  }
+  .services .super .more {
+    height: 60.4vh;
+    width: 96%;
+  }
+  .services .super li {
+    font-size: 9px;
+    padding: 0px;
+  }
+  .services .super h4 {
+    font-size: 9px;
+  }
+  .services .super h3 {
+    font-size: 11px;
+    padding: 0;
+  }
+  .main .get .kim2 {
+    width: 256px;
+    height: 43vh;
+  }
+  .main .get .kim1 {
+    width: 278px;
+    height: 42vh;
+  }
+  .main .get p {
+    font-size: 11px;
+    font-weight: 550;
+    margin: 0px 0;
+    line-height: 16px;
+    padding-top: 8px;
+  }
+  .instagram .demo img {
+    width: 13%;
+    height: 36vh;
+    padding: 3px;
+    -o-object-fit: cover;
+    object-fit: cover;
+  }
+  .isdo .first p {
+    margin-bottom: 3px;
+  }
+  .services .super .more i {
+    position: absolute;
+    font-size: 12px;
+    background-color: #742296;
+    border-radius: 50%;
+    padding: 5px 7px;
+    color: white;
+    z-index: 1;
+    margin-right: 9px;
+    margin-bottom: 13px;
+  }
+  .isdo .first .shame {
+    margin-left: 37px;
+    margin-bottom: 2px;
+  }
+  .isdo .first .shame {
+    margin-left: 37px;
+    margin-bottom: 2px;
+  }
+  .main-nav span {
+    margin: auto;
+    margin-right: 35px;
+    position: absolute;
+    display: none;
+  }
+  .services .super .more img {
+    -o-object-fit: contain;
+    object-fit: contain;
+    width: 18%;
+    height: 7vh;
+    opacity: 100%;
+    margin-right: 6px;
   }
 }/*# sourceMappingURL=style.css.map */
