--- a/style.css
+++ b/style.css
@@ -1027,7 +1027,7 @@ body {
     padding-bottom: 21px;
   }
 }
-@media (min-width: 578px) and (max-width: 768px) {
+@media (min-width: 576px) and (max-width: 991px) {
   .main-nav {
     padding: 20px;
   }
@@ -1401,6 +1401,27 @@ body {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
+  }
+  .services .super .more img {
+    -o-object-fit: contain;
+    object-fit: contain;
+    width: 61px;
+    height: 3vh;
+    opacity: 83%;
+    margin-right: 5px;
+    MARGIN-BOTTOM: -1PX;
+  }
+  .services .super .more {
+    height: 32.999vh;
+    width: 94%;
+  }
+  .services .super .more img {
+    -o-object-fit: contain;
+    object-fit: contain;
+    width: 18%;
+    height: 4.1vh;
+    opacity: 40%;
+    margin-right: 1px;
   }
 }
 @media (max-width: 575.98px) {
@@ -1791,7 +1812,7 @@ body {
     position: relative;
   }
   .services .super .more {
-    height: 50.43vh;
+    height: 51vh;
     width: 95.9%;
     display: flex;
     align-items: end;
@@ -1814,8 +1835,8 @@ body {
     padding: 5px 7px;
     color: white;
     z-index: 1;
-    margin-right: 5px;
-    margin-bottom: 5px;
+    margin-right: 7px;
+    margin-bottom: 9px;
   }
   .services .super h3 {
     font-size: 13px;
