--- a/style.scss
+++ b/style.scss
@@ -1620,7 +1620,7 @@ h1{
 
 
 
-@media   (min-width: 578px) and (max-width: 768px) {
+@media   (min-width: 576px) and (max-width: 991px) {
 
 
     
@@ -2198,6 +2198,31 @@ p {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
+}
+
+.services .super .more img {
+    -o-object-fit: contain;
+    object-fit: contain;
+    width: 61px;
+    height: 3vh;
+    opacity: 83%;
+    margin-right: 5px;
+    MARGIN-BOTTOM: -1PX;
+    
+}
+
+.services .super .more {
+    height: 32.999vh;
+    width: 94%;
+}
+
+.services .super .more img {
+    -o-object-fit: contain;
+    object-fit: contain;
+    width: 18%;
+    height: 4.1vh;
+    opacity: 40%;
+    margin-right: 1px;
 }
 
 }
@@ -2785,14 +2810,13 @@ p{
     
 
         .more{
-
-            height: 50.43vh;
-            width: 95.9%;
-            display: flex;
-            align-items: end;
-            justify-content:end ;
-            position: absolute;
-
+                height: 51vh;
+                width: 95.9%;
+                display: flex;
+                align-items: end;
+                justify-content: end;
+                position: absolute;
+            
               
          img{
             object-fit: contain;
@@ -2811,8 +2835,8 @@ p{
             padding: 5px 7px;
             color: white;
             z-index: 1;
-            margin-right: 5px;
-            margin-bottom: 5px;
+            margin-right: 7px;
+            margin-bottom: 9px;
         }
     
 
