--- a/style.css
+++ b/style.css
@@ -396,25 +396,16 @@ body {
   justify-content: end;
   position: absolute;
 }
-.services .super .more img {
-  position: relative;
-  -o-object-fit: contain;
-  object-fit: contain;
-  width: 16.9%;
-  height: 6.9vh;
-  opacity: 100%;
-  margin-right: 3.2px;
-}
 .services .super .more i {
   position: absolute;
-  font-size: 17px;
-  background-color: #742296;
-  border-radius: 50%;
-  padding: 5px 7px;
-  color: white;
+  font-size: 19px;
+  background-color: #EAECCC;
+  border-radius: 0%;
+  padding: 8px 13px;
+  color: purple;
   z-index: 1;
-  margin-right: 14px;
-  margin-bottom: 10px;
+  margin-right: 9px;
+  margin-bottom: 6px;
 }
 .services .super h3 {
   font-size: 18px;
@@ -547,17 +538,6 @@ body {
   margin: 15px 0;
   font-family: "JosefinSans-Regular";
   font-weight: bolder;
-}
-
-.services .super .more img {
-  position: relative;
-  -o-object-fit: contain;
-  object-fit: contain;
-  width: 16.7%;
-  height: 6vh;
-  opacity: 100%;
-  margin-right: 4.2px;
-  margin-bottom: 6px;
 }
 
 .instagram {
@@ -856,24 +836,16 @@ body {
     height: 28.5vh;
     width: 100%;
   }
-  .services .super .more img {
-    -o-object-fit: contain;
-       object-fit: contain;
-    width: 61px;
-    height: 3vh;
-    opacity: 100%;
-    margin-right: 4px;
-  }
   .services .super .more i {
     position: absolute;
-    font-size: 17px;
-    background-color: #742296;
-    border-radius: 50%;
-    padding: 5px 7px;
-    color: white;
+    font-size: 20px;
+    background-color: white;
+    border-radius: 0%;
+    padding: 8px 13px;
+    color: purple;
     z-index: 1;
-    margin-right: 20px;
-    margin-bottom: 6px;
+    margin-right: 14px;
+    margin-bottom: -2px;
   }
   .services .super h3 {
     font-size: 16px;
@@ -1027,7 +999,7 @@ body {
     padding-bottom: 21px;
   }
 }
-@media (min-width: 576px) and (max-width: 991px) {
+@media only screen and (min-width: 576px) and (max-width: 991px) {
   .main-nav {
     padding: 20px;
   }
@@ -1218,24 +1190,16 @@ body {
     height: 33vh;
     width: 94%;
   }
-  .services .super .more img {
-    -o-object-fit: contain;
-       object-fit: contain;
-    width: 18%;
-    height: 5.1vh;
-    opacity: 100%;
-    margin-right: 1px;
-  }
   .services .super .more i {
     position: absolute;
-    font-size: 17px;
-    background-color: #742296;
-    border-radius: 50%;
-    padding: 5px 7px;
-    color: white;
+    font-size: 19px;
+    background-color: #EAECCC;
+    border-radius: 0%;
+    padding: 9px 13px;
+    color: purple;
     z-index: 1;
-    margin-right: 6px;
-    margin-bottom: 12px;
+    margin-right: 1px;
+    margin-bottom: 9px;
   }
   .services .super h3 {
     font-size: 12px;
@@ -1440,8 +1404,8 @@ body {
     height: 7vh;
     width: 100%;
     -o-object-fit: contain;
-       object-fit: contain;
-    margin-left: 17px;
+    object-fit: contain;
+    margin-left: -7px;
   }
   .main-nav .nav-bar {
     margin-right: 118px;
@@ -1575,7 +1539,7 @@ body {
     font-weight: 100;
   }
   .banner .text h1 {
-    font-size: 28px;
+    font-size: 32px;
     margin-top: 0px;
     line-height: 32px;
   }
@@ -1819,24 +1783,16 @@ body {
     justify-content: end;
     position: absolute;
   }
-  .services .super .more img {
-    -o-object-fit: contain;
-       object-fit: contain;
-    width: 13%;
-    height: 6vh;
-    opacity: 100%;
-    margin-right: 3.2px;
-  }
   .services .super .more i {
     position: absolute;
-    font-size: 17px;
-    background-color: #742296;
-    border-radius: 50%;
-    padding: 5px 7px;
-    color: white;
+    font-size: 19px;
+    background-color: #EAECCC;
+    border-radius: 0%;
+    padding: 8px 13px;
+    color: purple;
     z-index: 1;
-    margin-right: 7px;
-    margin-bottom: 9px;
+    margin-right: 4px;
+    margin-bottom: 7px;
   }
   .services .super h3 {
     font-size: 13px;
@@ -1992,7 +1948,7 @@ body {
     font-weight: bolder;
   }
 }
-@media (min-width: 414px) and (max-width: 500px) {
+@media only sreen and (min-width: 414px) and (max-width: 500px) {
   .main-nav {
     padding: 20px 0px 0 0;
   }
@@ -2086,22 +2042,6 @@ body {
     padding: 20px 15px;
     position: relative;
   }
-  .services .super .more img {
-    -o-object-fit: contain;
-    object-fit: contain;
-    width: 13%;
-    height: 5.8vh;
-    opacity: 100%;
-    margin-right: 1.2px;
-  }
-  .services .super .more img {
-    -o-object-fit: contain;
-    object-fit: contain;
-    width: 13%;
-    height: 5.8vh;
-    opacity: 100%;
-    margin-right: 1.2px;
-  }
   .services .now {
     width: 81%;
     height: 54vh;
@@ -2110,32 +2050,16 @@ body {
     height: 54vh;
     width: 100%;
   }
-  .services .super .more img {
-    -o-object-fit: contain;
-    object-fit: contain;
-    width: 14%;
-    height: 6.5vh;
-    opacity: 100%;
-    margin-right: 0.2px;
-  }
-  .services .super .more {
-    height: 50.9vh;
-    width: 94.9%;
-    display: flex;
-    align-items: end;
-    justify-content: end;
-    position: absolute;
-  }
   .services .super .more i {
     position: absolute;
-    font-size: 17px;
-    background-color: #742296;
-    border-radius: 50%;
-    padding: 5px 7px;
-    color: white;
+    font-size: 19px;
+    background-color: #EAECCC;
+    border-radius: 0%;
+    padding: 8px 13px;
+    color: purple;
     z-index: 1;
-    margin-right: 5px;
-    margin-bottom: 7px;
+    margin-right: 2px;
+    margin-bottom: 4px;
   }
   .services .foni {
     width: 81%;
@@ -2309,22 +2233,6 @@ body {
     font-size: 20px;
     padding: 2px;
   }
-  .services .super .more {
-    width: 356px;
-    height: 75vh;
-    display: flex;
-    align-items: end;
-    justify-content: end;
-    position: absolute;
-  }
-  .services .super .more img {
-    -o-object-fit: contain;
-    object-fit: contain;
-    width: 12.9%;
-    height: 20.6vh;
-    opacity: 70%;
-    margin-right: 5.2px;
-  }
   .services .bad img {
     -o-object-fit: contain;
     object-fit: contain;
@@ -2398,14 +2306,6 @@ body {
     justify-content: end;
     position: absolute;
   }
-  .services .super .more img {
-    -o-object-fit: contain;
-    object-fit: contain;
-    width: 12.9%;
-    height: 5.6vh;
-    opacity: 70%;
-    margin-right: 5.2px;
-  }
   .services .bad h5 {
     font-size: 27px;
     color: white;
@@ -2421,183 +2321,15 @@ body {
     -o-object-fit: cover;
     object-fit: cover;
   }
-  .services .super .more img {
-    position: relative;
-    -o-object-fit: contain;
-    object-fit: contain;
-    width: 16.9%;
-    height: 6vh;
-    opacity: 100%;
-    margin-right: 3.2px;
-    margin-bottom: 5px;
-  }
   .services .super .more i {
     position: absolute;
-    font-size: 18px;
-    background-color: #742296;
-    border-radius: 50%;
-    padding: 5px 7px;
-    color: white;
+    font-size: 20px;
+    background-color: #EAECCC;
+    border-radius: 0%;
+    padding: 8px 13px;
+    color: purple;
     z-index: 1;
-    margin-right: 18px;
-    margin-bottom: 14px;
-  }
-}
-@media only screen and (min-width: 766px) and (max-width: 767.9px) {
-  .banner .row > * {
-    flex-shrink: 0;
-    width: 45%;
-    max-width: 100%;
-    padding-right: calc(var(--bs-gutter-x) * 0.5);
-    padding-left: calc(var(--bs-gutter-x) * 0.5);
-    margin-top: var(--bs-gutter-y);
-  }
-  .banner img {
-    width: 98px;
-    height: 48vh;
-    padding-right: 10px;
-  }
-  .banner .text h1 {
-    font-size: 29px;
-    margin-top: 0px;
-    line-height: 31px;
-    margin-bottom: 5px;
-  }
-  .banner .text p {
-    font-size: 12px;
-    font-family: "JosefinSans-Regular";
-    font-weight: 400;
-    line-height: 1.4;
-    padding-top: 0px;
-    padding-bottom: 7px;
-    line-height: 17px;
-    margin-bottom: 4px;
-  }
-  .main-nav .nav-bar img {
-    padding-left: 58px;
-    width: 23%;
-  }
-  .container .row > * {
-    flex-shrink: 0;
-    width: 50%;
-    max-width: 100%;
-    padding-right: calc(var(--bs-gutter-x) * 0.5);
-    padding-left: calc(var(--bs-gutter-x) * 0.5);
-    margin-top: var(--bs-gutter-y);
-  }
-  .about .container .gallery img {
-    height: 33.3vh;
-  }
-  .about .container .gun #video {
-    width: 283px;
-    height: 195px;
-  }
-  .about .container p {
-    font-size: 10px;
-    margin-bottom: 13px;
-    padding-top: 1px;
-  }
-  .services .now {
-    width: 33%;
-    height: 63vh;
-    position: relative;
-  }
-  .services .foni {
-    width: 33%;
-    height: 63vh;
-    position: relative;
-  }
-  .about .container p {
-    font-size: 9px;
-    margin-bottom: 13px;
-    padding-top: 1px;
-  }
-  .services .bad {
-    height: 63vh;
-    width: 100%;
-  }
-  .services .now .good {
-    height: 63vh;
-    width: 100%;
-  }
-  .services .super {
-    margin: 0 20px;
-    width: 33%;
-    height: 63vh;
-    padding: 20px 15px;
-    position: relative;
-  }
-  .services .super .more {
-    height: 60.4vh;
-    width: 96%;
-  }
-  .services .super li {
-    font-size: 9px;
-    padding: 0px;
-  }
-  .services .super h4 {
-    font-size: 9px;
-  }
-  .services .super h3 {
-    font-size: 11px;
-    padding: 0;
-  }
-  .main .get .kim2 {
-    width: 256px;
-    height: 43vh;
-  }
-  .main .get .kim1 {
-    width: 278px;
-    height: 42vh;
-  }
-  .main .get p {
-    font-size: 11px;
-    font-weight: 550;
-    margin: 0px 0;
-    line-height: 16px;
-    padding-top: 8px;
-  }
-  .instagram .demo img {
-    width: 13%;
-    height: 36vh;
-    padding: 3px;
-    -o-object-fit: cover;
-    object-fit: cover;
-  }
-  .isdo .first p {
+    margin-right: 11px;
     margin-bottom: 3px;
-  }
-  .services .super .more i {
-    position: absolute;
-    font-size: 12px;
-    background-color: #742296;
-    border-radius: 50%;
-    padding: 5px 7px;
-    color: white;
-    z-index: 1;
-    margin-right: 9px;
-    margin-bottom: 13px;
-  }
-  .isdo .first .shame {
-    margin-left: 37px;
-    margin-bottom: 2px;
-  }
-  .isdo .first .shame {
-    margin-left: 37px;
-    margin-bottom: 2px;
-  }
-  .main-nav span {
-    margin: auto;
-    margin-right: 35px;
-    position: absolute;
-    display: none;
-  }
-  .services .super .more img {
-    -o-object-fit: contain;
-    object-fit: contain;
-    width: 18%;
-    height: 7vh;
-    opacity: 100%;
-    margin-right: 6px;
   }
 }/*# sourceMappingURL=style.css.map */
