--- a/style.css
+++ b/style.css
@@ -1616,6 +1616,9 @@ body {
   }
 }
 @media only screen and (max-width: 575.98px) {
+  body {
+    overflow-x: hidden;
+  }
   .main-nav .nav-bar {
     margin-right: 119px;
   }
