--- a/style.scss
+++ b/style.scss
@@ -2719,6 +2719,10 @@ h1{
 
 @media  only screen and (max-width:575.98px) {
 
+    body{
+        overflow-x: hidden;
+    }
+
 
     .main-nav .nav-bar {
         margin-right: 119px;
