--- a/style.css
+++ b/style.css
@@ -1194,6 +1194,9 @@ body {
   }
 }
 @media (min-width: 576px) and (max-width: 991px) {
+  body {
+    overflow-x: hidden;
+  }
   .main-nav {
     padding: 20px;
   }
@@ -1615,7 +1618,7 @@ body {
     display: none;
   }
 }
-@media only screen and (max-width: 575.98px) {
+@media (max-width: 575.98px) {
   body {
     overflow-x: hidden;
   }
@@ -1675,7 +1678,7 @@ body {
     position: relative;
     margin-right: 30px;
     display: flex;
-    right: 5px;
+    right: 11px;
   }
   .main-nav .overlay-content {
     position: absolute;
@@ -1695,7 +1698,7 @@ body {
     display: block;
     transition: 0.3s;
   }
-  .main-nav .main-nav .overlay .closebtn {
+  .main-nav .overlay .closebtn {
     position: absolute;
     top: -33px;
     right: 8px;
